--- a/templates/options.twig
+++ b/templates/options.twig
@@ -10,15 +10,15 @@
     <div class="col-md-8">
         <ul class="nav nav-tabs" id="filtertabs">
             {% for tab in tabs %}
-                <li>
+                <li {% if tab.getId() == 0 %} class="active" {% endif %} >
                     <a href="#tab-{{ tab.getId() }}" data-toggle="tab">{{ tab.getName() }}</a>
                 </li>
             {% endfor %}
         </ul>
 
+        <div class="tab-content">
         {% for tab in tabs %}
-            <div class="tab-content">
-                <div id="tab-{{ tab.getId() }}" class="tab-pane">
+                <div id="tab-{{ tab.getId() }}" class="tab-pane {% if tab.getId() == 0 %} active {% endif %} ">
                     {% for field in tab.getFields %}
 
                         {% if field.getType() == "text" %}
@@ -27,8 +27,8 @@
 
                     {% endfor %}
                 </div>
-            </div>
         {% endfor %}
+        </div>
     </div>
 
     <aside class="col-md-4">
