--- a/templates/options.twig
+++ b/templates/options.twig
@@ -23,6 +23,8 @@
 
                         {% if field.getType() == "text" %}
                             {% include '@UIOptions/types/text.twig' with {field: field, tab: tab} %}
+                        {% elseif field.getType() == "date" %}
+                            {% include '@UIOptions/types/date.twig' with {field: field, tab: tab} %}
                         {% endif %}
 
                     {% endfor %}
