added select type option and textarea option type

--- a/templates/options.twig
+++ b/templates/options.twig
@@ -25,6 +25,10 @@
                             {% include '@UIOptions/types/text.twig' with {field: field, tab: tab} %}
                         {% elseif field.getType() == "date" %}
                             {% include '@UIOptions/types/date.twig' with {field: field, tab: tab} %}
+                        {% elseif field.getType() == "textarea" %}
+                            {% include '@UIOptions/types/textarea.twig' with {field: field, tab: tab} %}
+                        {% elseif field.getType() == "select" %}
+                            {% include '@UIOptions/types/select.twig' with {field: field, tab: tab} %}
                         {% endif %}
 
                     {% endfor %}
