--- a/templates/options.twig
+++ b/templates/options.twig
@@ -16,7 +16,7 @@
             {% endfor %}
         </ul>
 
-        <div class="tab-content">
+        <div class="tab-content ui-options">
         {% for tab in tabs %}
                 <div id="tab-{{ tab.getId() }}" class="tab-pane {% if tab.getId() == 0 %} active {% endif %} ">
                     {% for field in tab.getFields %}
@@ -34,6 +34,9 @@
                     {% endfor %}
                 </div>
         {% endfor %}
+            <button type="submit" class="btn btn-primary">
+                <i class="fa fa-edit"></i> Save
+            </button>
         </div>
     </div>
 
@@ -44,7 +47,7 @@
                 Actions</div>
 
             <div class="panel-body">
-                <button type="submit" id="saveOptions" class="btn btn-primary">
+                <button type="submit" class="btn btn-primary">
                     <i class="fa fa-edit"></i> Save
                 </button>
             </div>
