--- a/templates/types/date.twig
+++ b/templates/types/date.twig
@@ -1,4 +1,4 @@
 <div class="option-wrapper">
     <label for="{{ field.getSlug() }}" class="option-title">{{ field.getName() }}</label>
-    <input class="form-control" id="{{ field.getSlug() }}" value="{{ field.getValue() }}" type="date" name="{{ tab.getSlug() }}[{{ field.getSlug() }}]">
+    <input class="form-control" id="{{ field.getSlug() }}" value="{{ field.getValue() }}" type="date" name="{{ type }}[{{ tab.getSlug() }}][{{ field.getSlug() }}]">
 </div>
