--- a/templates/types/textarea.twig
+++ b/templates/types/textarea.twig
@@ -1,4 +1,4 @@
 <div class="option-wrapper">
     <label for="{{ field.getSlug() }}" class="option-title">{{ field.getName() }}</label>
-    <textarea class="form-control" id="{{ field.getSlug() }}" name="{{ tab.getSlug() }}[{{ field.getSlug() }}]">{{ field.getValue() }}</textarea>
+    <textarea class="form-control" id="{{ field.getSlug() }}" name="{{ type }}[{{ tab.getSlug() }}][{{ field.getSlug() }}]">{{ field.getValue() }}</textarea>
 </div>
