--- a/templates/options.twig
+++ b/templates/options.twig
@@ -6,8 +6,15 @@
 
 
 {% block page_main %}
+
     <form method="post" action="{{ app.url_generator.generate('ui.options.save') }}">
         <div class="col-md-8">
+            {% for message in app.session.getFlashBag.get('ui-options') %}
+                <div class="alert alert-{{ message.type }} alert-dismissible" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    {{ message.message }}
+                </div>
+            {% endfor %}
             <ul class="nav nav-tabs" id="filtertabs">
                 {% for tab in tabs %}
                     <li {% if tab.getId() == 0 %} class="active" {% endif %} >
