added color field with a color picker

--- a/templates/options.twig
+++ b/templates/options.twig
@@ -42,6 +42,8 @@
                                 {% include '@UIOptions/types/textarea.twig' with {field: field, tab: tab, type: "extension"} %}
                             {% elseif field.getType() == "select" %}
                                 {% include '@UIOptions/types/select.twig' with {field: field, tab: tab, type: "extension"} %}
+                            {% elseif field.getType() == "color" %}
+                                {% include '@UIOptions/types/color.twig' with {field: field, tab: tab, type: "extension"} %}
                             {% endif %}
 
                         {% endfor %}
@@ -61,6 +63,8 @@
                                 {% include '@UIOptions/types/textarea.twig' with {field: field, tab: tab, type: "theme"} %}
                             {% elseif field.getType() == "select" %}
                                 {% include '@UIOptions/types/select.twig' with {field: field, tab: tab, type: "theme"} %}
+                            {% elseif field.getType() == "color" %}
+                                {% include '@UIOptions/types/color.twig' with {field: field, tab: tab, type: "theme"} %}
                             {% endif %}
 
                         {% endfor %}
