added radio button type field

--- a/templates/options.twig
+++ b/templates/options.twig
@@ -44,6 +44,8 @@
                                 {% include '@UIOptions/types/select.twig' with {field: field, tab: tab, type: "extension"} %}
                             {% elseif field.getType() == "color" %}
                                 {% include '@UIOptions/types/color.twig' with {field: field, tab: tab, type: "extension"} %}
+                            {% elseif field.getType() == "radio" %}
+                                {% include '@UIOptions/types/radio.twig' with {field: field, tab: tab, type: "extension"} %}
                             {% endif %}
 
                         {% endfor %}
@@ -65,6 +67,8 @@
                                 {% include '@UIOptions/types/select.twig' with {field: field, tab: tab, type: "theme"} %}
                             {% elseif field.getType() == "color" %}
                                 {% include '@UIOptions/types/color.twig' with {field: field, tab: tab, type: "theme"} %}
+                            {% elseif field.getType() == "radio" %}
+                                {% include '@UIOptions/types/radio.twig' with {field: field, tab: tab, type: "theme"} %}
                             {% endif %}
 
                         {% endfor %}
